fix(gateway): Add new test cases to valide automatically dynamic routing (#119)